- Restart application after update, should only happen if dialog not showing
- Instead of overwriting remote file, copy to Trash folder in the same container
- Empty trash

## Panda-Tray:

0.16
* Bug fixes:
- Was not handling pure pseudo directories correctly (resulting in infinite download/delete/download... loop)
- Completely replaced how the auto update works

0.15
* New functionality
- Now handling multiple accounts - files are stored under /DigitalPanda/Username
- Instead of deleting remote files, they get moved to Trash folder in the same container
- If there were any changes remotely, or locally, panda immediately looks for work without resting
- Database version now matches software version - this to ensure that upgrading/downgrading won't
	break things. (The down side is a re-indexing when you upgrade - meaning things are a bit slow
	when you upgrade)
- Only doing cleanup after upgrade, in order to limit super user calls
- Make all the gfx very ugly, by pasting alpha on everything
- Restart after update
- Get updates depending on configuration - to allow for dev/qa testing of updates
- Improved interruption of upload process
- Instead of overwriting remote file, copy to trash
- Panda will restart after upgrade

0.14
* Bug fixes:
- Downloads were coming down incomplete - added check to ensure that file hashes match

0.13
* Bug fixes:
- Downloads and uploads can be interrupted, so that panda tray doesn't keep running in background
* New functionality
- Local files are moved to recycle bin instead of being deleted
- More detailed status updates (filename of what is being uploaded,deleted,downloaded), and download 
  progress & speed

0.12
* Bug fixes:
- Fixed some bugs syncing containers that contain spaces
- Fixed a unicode bug that broken syncing local db

0.11
* Bug fixes:
- Fixed bugs around folder syncing (deleting folders locally - wouldn't sync correctly remotely)
* New functionality